hphp/hack/test/typecheck/strict_switch/mixed_and_null.php.exp
File "mixed_and_null.php", line 13, characters 11-12:
`switch` statement nonexhaustive; at least the following cases are missing: `default`, `true`, `false` (Typing[4019])
  File "mixed_and_null.php", line 13, characters 11-12:
  only unions and intersections of bool, null and enums can be switched on without a default
